# canopy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  gen_svgs.py  github-issue-active-context.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agents.md  architecture.md  commands.md  concepts.md  mcp.md  test-findings.md  test-plan.md  workspace.md
docs/architecture/: providers.md
docs/plans/: INDEX.md  action-drawer.md  augments.md  bot-tracking.md  ci-status.md  cross-feature-conflicts.md  doctor.md  historian.md  providers-arch.md  roadmap.md  sidebar-single-tree.md  wave-2-4-ship.md  wave-4-draft-replies.md  worktree-bootstrap.md
mockups/: canopy-vscode.html
src/canopy/: __init__.py
tests/: conftest.py  test_action_errors.py  test_active_feature.py  test_agent_setup.py  test_aliases.py  test_augments.py  test_bootstrap.py  test_bot_resolutions.py  test_bot_status.py  test_ci_status.py  test_commit.py  test_commit_push_integration.py  test_config.py  test_config_done.py  test_conflicts.py  test_context_stage.py  test_coordinator.py  test_doctor.py  test_draft_replies.py  test_drift.py  test_evacuate.py  test_feature_state.py  test_feature_state_bot.py  test_historian.py  test_hook_context.py  test_hook_gate.py  test_hooks.py  test_import_boundary.py  test_install_hooks.py  test_join.py  test_last_visit.py  test_linear_integration.py  test_mcp_server_worktree_create.py  test_mcp_surface.py  test_new_commands.py  test_pr_map.py  test_precommit.py  test_providers_github_issues.py  test_providers_linear.py  test_providers_registry.py  (+26 more)
(+87 files in other folders)
