[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canopy"
dynamic = ["version"]
description = "Workspace-first development orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "mcp>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
graph = [
    "networkx>=3.0",
    "tree-sitter>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
canopy = "canopy.cli.main:main"
canopy-mcp = "canopy.mcp.server:main"

[tool.hatch.version]
path = "src/canopy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/canopy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
